﻿2008-05-05 tadashi-k
	* Added Sort and Filter options in Outline and Hierarchy views
	* Modify behavior of Go To Definition
	* Added context dependent content assist
	* Added Verilog directive scanner
	* Fixed bugs about Verilog Content Assist
	* Added option of scanning all files in the project
	* Modify parsing Verilog comment
	* Fixed bugs about parsing Verilog code
2007-06-10 tadashi-k
	* Fixed bugs about parsing compiler directives and case statement in Verilog
	* Fixed bugs about parsing if statement in generate block
	* Added Code Style preference page for Verilog code formatter
	* Build for JRE 1.5 (no longer support 1.4)
2007-05-22 Ali Ghorashi
	* Fixed bugs 1723058 (generate declarations) and 1703662 (custom attributes)
2007-04-14 tadashi-k
	* Fixed indent bug in module instantiation
	* Fixed openPage bug in Verilog and VHDL mixed design
2007-02-11 tadashi-k
	* Fixed parsing parameter statement in Verilog
	* Preserve indent in template pattern
2007-01-06 tadashi-k
	* Added Verilog context types and templates
	* Fixed a problem of VHDL "inModule" template
	* Fixed 1573514
2006-12-28 Ali Ghorashi
	* Added Templates Support
	* Added Toolbar menus for compiling
	* Fixed 1613455
2006-12-19  Øyvind Harboe
	* The project now does not need to be named "veditor" to compile.
2006-12-12 Ghorashi-A
	* Fixed a problem with "end architecture" in vhdl parser
	* Fixed a builder bug that looked at "/" as the current directry
	* Fixed compile action so that all the files are saved before compiling if 
	  the "Save Automatically Before Build" option is checked. 
	* Moved Compile Action to build menu
	* Added Block Command and Block Uncomment
2006-12-10  tadashi-k
	* fixed bugs about error parser and simulation
2006-09-10  tadashi-k
	* add Export-Package in MANIFEST.MF for test
2006-08-27  tadashi-k
	* add a new contributor to CONTRIBUTORS.txt
2006-08-26  tadashi-k
	* refactored ParserCore.jj and other files.
	* implemented TextHover with declaration lines