@@ -25,5 +25,6 @@ Require-Bundle:
  org.eclipse.core.resources,
  org.eclipse.ui.views,
  org.eclipse.ui.ide,
- org.eclipse.ui.console
+ org.eclipse.ui.console,
+ org.eclipse.core.filesystem
 Eclipse-LazyStart: true
